--- a/gb/20/2/12/n11863726.md
+++ b/gb/20/2/12/n11863726.md
@@ -1,63 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rpmruk214/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rpmruk214/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rpmruk214/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rpmruk214/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rpmruk214/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rpmruk214/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rpmruk214/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rpmruk214/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rpmruk214/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rpmruk214/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rpmruk214/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rpmruk214/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rpmruk214/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rpmruk214/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rpmruk214/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rpmruk214/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rpmruk214/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/rpmruk214/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/rpmruk214/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rpmruk214/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rpmruk214/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mytgei3586/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mytgei3586/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mytgei3586/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mytgei3586/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mytgei3586/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台外交部：台湾获邀成国际宗教自由联盟观察员</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/09/9782cd15c1de4b79666a46179b0530b9-600x400.jpg" />
 <h6>外交部发言人欧江安。 （李怡欣／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年02月12日讯】美国国务卿蓬佩奥上周宣布成立<a href="https://github.com/rpmruk214/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%AE%97%E6%95%99%E8%87%AA%E7%94%B1%E8%81%94%E7%9B%9F.md">国际宗教自由联盟</a>，台湾<a href="https://github.com/rpmruk214/djy/blob/master/gb/tag/%E5%A4%96%E4%BA%A4%E9%83%A8.md">外交部</a>表示，美国宗教自由无任所大使布朗贝克（Sam Brownback）已正式邀请台湾成为联盟<a href="https://github.com/rpmruk214/djy/blob/master/gb/tag/%E8%A7%82%E5%AF%9F%E5%91%98.md">观察员</a>。</p>
-<p>据中央社报导，蓬佩奥（Mike Pompeo）在华府宣布成立“<a href="https://github.com/rpmruk214/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%AE%97%E6%95%99%E8%87%AA%E7%94%B1%E8%81%94%E7%9B%9F.md">国际宗教自由联盟</a>”（International Religious Freedom Alliance），邀请27国参与，台湾却遭排除。撰文为台湾打抱不平的华盛顿邮报（Washington Post）专栏作家罗金（Josh Rogin）引述消息来源，指出北京对多个参与国家施压，以确保台湾被排除。</p>
-<p><a href="https://github.com/rpmruk214/djy/blob/master/gb/tag/%E5%A4%96%E4%BA%A4%E9%83%A8.md">外交部</a>发言人<a href="https://github.com/rpmruk214/djy/blob/master/gb/tag/%E6%AC%A7%E6%B1%9F%E5%AE%89.md">欧江安</a>指出，布朗贝克肯定台湾积极呼应美方促进国际宗教自由的诉求，已正式邀请台湾成为国际宗教自由联盟<a href="https://github.com/rpmruk214/djy/blob/master/gb/tag/%E8%A7%82%E5%AF%9F%E5%91%98.md">观察员</a>，以期台湾持续在印太地区作出贡献及分享民主价值。</p>
-<p><a href="https://github.com/rpmruk214/djy/blob/master/gb/tag/%E6%AC%A7%E6%B1%9F%E5%AE%89.md">欧江安</a>表示，台美共享民主、自由、人权等核心价值，在推动国际宗教自由方面合作密切。</p>
+<p>【大纪元2020年02月12日讯】美国国务卿蓬佩奥上周宣布成立<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%AE%97%E6%95%99%E8%87%AA%E7%94%B1%E8%81%94%E7%9B%9F.md#1">国际宗教自由联盟</a>，台湾<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E5%A4%96%E4%BA%A4%E9%83%A8.md#1">外交部</a>表示，美国宗教自由无任所大使布朗贝克（Sam Brownback）已正式邀请台湾成为联盟<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E8%A7%82%E5%AF%9F%E5%91%98.md#1">观察员</a>。</p>
+<p>据中央社报导，蓬佩奥（Mike Pompeo）在华府宣布成立“<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%AE%97%E6%95%99%E8%87%AA%E7%94%B1%E8%81%94%E7%9B%9F.md#1">国际宗教自由联盟</a>”（International Religious Freedom Alliance），邀请27国参与，台湾却遭排除。撰文为台湾打抱不平的华盛顿邮报（Washington Post）专栏作家罗金（Josh Rogin）引述消息来源，指出北京对多个参与国家施压，以确保台湾被排除。</p>
+<p><ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E5%A4%96%E4%BA%A4%E9%83%A8.md#1">外交部</a>发言人<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E6%AC%A7%E6%B1%9F%E5%AE%89.md#1">欧江安</a>指出，布朗贝克肯定台湾积极呼应美方促进国际宗教自由的诉求，已正式邀请台湾成为国际宗教自由联盟<ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E8%A7%82%E5%AF%9F%E5%91%98.md#1">观察员</a>，以期台湾持续在印太地区作出贡献及分享民主价值。</p>
+<p><ahref="https://github.com/mytgei3586/djy/blob/master/gb/tag/%E6%AC%A7%E6%B1%9F%E5%AE%89.md#1">欧江安</a>表示，台美共享民主、自由、人权等核心价值，在推动国际宗教自由方面合作密切。</p>
 <p>她指出，台湾首位宗教自由无任所大使布兴?大立和驻美国代表高硕泰于去年7月受邀参加国务院举办的“促进宗教自由部长级会议”，与其他理念相近国家政府官员讨论如何促进全球宗教自由。此外，台湾也于去年3月举办首届区域性宗教自由公民社会对话，布朗贝克当时也访台出席。</p>
 <p>欧江安强调，外交部与美国国务院宗教自由办公室联系管道畅通，并将延续过去良好合作基础，持续深化台美伙伴关系。</p>
 <p>责任编辑：陈安</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/12/n11863726.htm">台外交部：台湾获邀成国际宗教自由联盟观察员</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】方斌被抓 传两千军警被隔离 企业苦撑</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860064.htm">【十字路口】业界爆料：中共要赶制百万尸袋</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861792.htm">【新闻看点】西陆网发文剑指石正丽 背后诡异</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861213.htm">自称发展中国家 中国等20多国WTO优惠被美取消</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853863.htm">《推背图》第56象解译武汉肺炎和解救之道</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11859188.htm">【历史上的瘟疫】明末瘟疫剑指大明不染清军</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/4/n11843021.htm">武汉瘟疫治寻根  历史天象醒今人（上）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860724.htm">东湾房交贷款“双剑合璧” 房产交易领先一步</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860533.htm">【猫的二三事】搞懂猫的语言与肢体动作</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861761.htm">神奇的发酵食物 营养专家教你做3道发酵美食</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861773.htm">【胡乃文开讲】痛风尿酸高？喝这碗汤可以改善</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11862015.htm">加拿大1月份新屋开工量明显上升</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861946.htm">【热点互动】封城封口 疫情危机变政治危机？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/11/26/n11680874.htm">【思想领袖】谷歌脸书如何操纵大众观点</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861773.htm">【胡乃文开讲】痛风尿酸高？喝这碗汤可以改善</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11856687.htm">【疫情最前线】死亡人数恐上万 6成病逝家中</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11857413.htm">【翻墙必看】分析：风向已变 中共五毛不妙</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11859604.htm">【疫情最前线】病毒突变更致命 恐酿大瘟疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11859214.htm">杜汶泽订2万口罩到货 先派给一线医护人员</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11856505.htm">被传产下双胞胎 唐嫣：愿所有人都能平安回家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860801.htm">TWICE九人唱《FS》 Mina登推特趋势榜冠军</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11856400.htm">传黄渤新片欠租 剧组疑遭影城赶出拍摄场地</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11856834.htm">第92届奥斯卡揭晓 韩片《寄生虫》捧四大奖</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853863.htm">《推背图》第56象解译武汉肺炎和解救之道</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11859188.htm">【历史上的瘟疫】明末瘟疫剑指大明不染清军</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/4/n11843021.htm">武汉瘟疫治寻根  历史天象醒今人（上）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851416.htm">【命理】东汉名将邓禹为13儿看相 个个应验</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/12/n12543178.md#1">WHO脸书封杀“台湾” 吴钊燮：非常不满！</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/10/n12538906.md#1">立陶宛新政府挺台 支持为自由奋斗</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/6/n12530313.md#1">拉美17国及中美洲议会144议员挺台参与WHA</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/6/n12529713.md#1">欧洲25国644位议员致函谭德塞 支持台湾参与WHA</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/3/n12522212.md#1">美总统大选 经长：两党支持台湾不变</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/1/n12517715.md#1">美大选倒数 外交部：盼台美关系再创新猷</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/1/n12517403.md#1">中欧波海7国逾百政要 联名支持台湾参与WHO</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/1/n12517472.md#1">拜登丑闻 掀出美国亲共政客</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/31/n12515947.md#1">关怀爱琴海强震 蔡英文：我们准备好提供帮助</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/10/31/n12515655.md#1">长荣女大生命案 蔡英文向家属、马国致歉</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rpmruk214/djy/blob/master/gb/20/2/12/n11863726.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rpmruk214/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rpmruk214/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rpmruk214/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rpmruk214/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rpmruk214/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10232804.md#1" target="_blank">共产暴政录：精于绑票和洗劫的方志敏</a></li><li><a href="https://github.com/mytgei3586/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/11/n12541883.md#1">突出部之役 巴顿将军的神迹之战</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556457.md#1">从《狮子王》经典台词 看天选之王的成长</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561687.md#1">【罗厨寻味】洋葱炒牛肉</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561919.md#1">【财商天下】钱多多麻烦多 “割富豪”时代到来</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562870.md#1">【大陆新闻解毒】时事小品：多猫腻跨国搞政变</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12558221.md#1">【大选更新11.18】林伍德：川普将击败所有对手</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557575.md#1">计算“邮寄选票”后反超 监察员：应停点邮寄选票</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559329.md#1">密歇根韦恩县认证选举结果反转内幕曝光</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12559155.md#1">孙俪晒六岁女儿毛笔字 小花版千字文字体工整</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556222.md#1">珉豪军中回忆有TWICE的歌 感谢女团给士兵力量</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556732.md#1">林青霞生日出新书 帖文证实与富商丈夫情未变</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12557059.md#1">土国表妹确诊染疫 吴凤叹病毒把多国变成地狱</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560394.md#1">姜素拉怀孕获公司证实 孩子预计明年4月出生</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557834.md#1">【美食天堂】4种方法长久保存姜～几个月都新鲜！</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557479.md#1">全球最后一只白色长颈鹿 加装GPS追踪器</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/18/n12557985.md#1">45亿年历史陨石砸破屋顶 印尼男子变大富翁</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/17/n12556081.md#1">凡士林不只保湿 有5大妙用 挑选看1点</a></li>
+<li><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/15/n12550494.md#1">冷藏肉与冷冻肉不一样 购买时要睁大眼睛</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/12/n11863726.htm">台外交部：台湾获邀成国际宗教自由联盟观察员</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mytgei3586/djy/blob/master/gb/20/2/12/n11863726.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mytgei3586/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mytgei3586/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mytgei3586/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mytgei3586/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
